--- a/validation/results/validate_wy.Rmd
+++ b/validation/results/validate_wy.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(here)
-library(PUMP)
+#library(PUMP)
 library(pander)
 # default tables to round to 3 digits
 panderOptions('round', 3)
@@ -22,7 +22,7 @@ source(here::here("validation/code", "misc.R"))
 
 ```{r sim.params}
 sim.params.list <- list(
-  S = 2000                     # Number of samples for Monte Carlo Simulation
+  S = 2000                    # Number of samples for Monte Carlo Simulation
   , Q = 1
   , B = 1000
   , MTP = c("Bonferroni", "BH", "Holm", "WY-SS")
@@ -110,6 +110,7 @@ With a small number of blocks/clusters, we may not properly estimate the spread 
 ```{r}
 model.params.list <- model.params.default
 sim.params.list[['B']] <- 1000
+sim.params.list[['S']] <- 2000
 
 model.params.list[['K']] <- 1
 model.params.list[['ICC.3']] <- NULL
@@ -163,6 +164,7 @@ print(d2.1_m2fr_power_plot)
 model.params.list <- model.params.default
 sim.params.list <- sim.params.default
 sim.params.list[['B']] <- 1000
+sim.params.list[['S']] <- 2000
 
 model.params.list[['K']] <- 1
 model.params.list[['ICC.3']] <- NULL
@@ -189,7 +191,8 @@ print(d2.2_m2rc_power_plot)
 
 ```{r}
 model.params.list <- model.params.default
-sim.params.list[['B']] <- 100
+# sim.params.list[['B']] <- 100
+sim.params.list[['S']] <- 200
 
 # assumptions
 model.params.list[['numCovar.3']] <- 0
@@ -219,7 +222,8 @@ print(d3.1_m3rr2rr_power_plot)
 
 ```{r}
 model.params.list <- model.params.default
-sim.params.list[['B']] <- 100
+#sim.params.list[['B']] <- 100
+sim.params.list[['S']] <- 200
 
 # assumptions
 model.params.list[['omega.2']] <- NULL
@@ -249,6 +253,8 @@ print(d3.3_m3rc2rc_power_plot)
 
 ```{r}
 model.params.list <- model.params.default
+#sim.params.list[['B']] <- 100
+sim.params.list[['S']] <- 200
 
 # assumptions
 model.params.list[['numCovar.3']] <- 0
@@ -265,8 +271,6 @@ model.params.list[['ICC.2']] <- rep(0.1, M)
 model.params.list[['R2.1']] <- rep(0.4, M)
 model.params.list[['R2.2']] <- rep(0.4, M)
 model.params.list[['R2.3']] <- rep(0.4, M)
-
-sim.params.list[['B']] <- 100
 ```
 
 Constant effects
@@ -284,7 +288,8 @@ Random effects
 
 ```{r}
 # for reasonable power and runtime
-sim.params.list[['B']] <- 100
+#sim.params.list[['B']] <- 100
+sim.params.list[['S']] <- 200
 
 model.params.list[['nbar']] <- 100
 model.params.list[['J']] <- 5
